--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,3 @@
 {
-  "cSpell.customDictionaries": {
-    "custom-dictionary-workspace": {
-      "name": "custom-dictionary-workspace",
-      "path": "${workspaceFolder:pintrest-clone}/.cspell/custom-dictionary-workspace.txt",
-      "addWords": true,
-      "scope": "workspace"
-    }
-  }
+  "cSpell.words": ["supabase"]
 }
