--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@headlessui/react": "^2.1.10",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.6",
     "@vercel/blob": "^0.25.1",
     "class-variance-authority": "^0.7.0",
