--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-vibrant": "^3.2.1-alpha.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.13.1",
     "react-masonry-css": "^1.0.16",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
