--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vercel/blob": "^0.25.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "groq-sdk": "^0.7.0",
     "lucide-react": "^0.452.0",
     "next": "14.2.15",
     "node-vibrant": "^3.2.1-alpha.1",
